mywork/force-app/main/default/objects/Backlog_Component__c/Backlog_Component__c.object-meta.xml
<CustomObject>
    <description>Links component records to backlog items like stories and defects.</description>
    <label>Backlog Component</label>
    <nameField>
        <displayFormat>BC-{000000}</displayFormat>
        <label>Backlog Component</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlog Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>