mywork/force-app/main/default/objects/Backlog_Component__c/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <label>Backlog</label>
    <referenceTo>Backlog__c</referenceTo>
    <relationshipName>SCBridge</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>