mywork/force-app/main/default/objects/Backlog_Component__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether or not this component has been deleted in the source instance.</inlineHelpText>
    <label>Documented As Deleted</label>
    <type>Checkbox</type>
</CustomField>