mywork/force-app/main/default/objects/Backlog_Component__c/fields/Deploy_Manually__c.field-meta.xml
<CustomField>
    <fullName>Deploy_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true if this component should be deployed manually</inlineHelpText>
    <label>Deploy Manually</label>
    <type>Checkbox</type>
</CustomField>