mywork/force-app/main/default/objects/Backlog_Component__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profile</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Backlog Components (Profile)</relationshipLabel>
    <relationshipName>Backlog_Components</relationshipName>
    <type>Lookup</type>
</CustomField>