mywork/force-app/main/default/objects/Backlog_Component__c/fields/Profile_Permission__c.field-meta.xml
<CustomField>
    <fullName>Profile_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile Permission</label>
    <type>Checkbox</type>
</CustomField>