mywork/force-app/main/default/objects/Backlog_Component__c/fields/Source_Instance__c.field-meta.xml
<CustomField>
    <fullName>Source_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The name of the sandbox where this component was developed.</inlineHelpText>
    <label>Source Instance</label>
    <referenceTo>Instances__c</referenceTo>
    <relationshipLabel>Backlog Components</relationshipLabel>
    <relationshipName>Backlog_Components</relationshipName>
    <type>Lookup</type>
</CustomField>