mywork/force-app/main/default/objects/Backlog_Component__c/fields/Source_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Source_Sandbox__c</fullName>
    <inlineHelpText>The name of the sandbox where this component was developed.</inlineHelpText>
    <label>Source Sandbox</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>